// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fromPaymentRequestShippingAddress should format complete address details with a parsable name 1`] = `
Object {
  "address1": "123 Fake St",
  "address2": "",
  "city": "Los Angeles",
  "company": "",
  "countryCode": "US",
  "firstName": "Joe",
  "lastName": "Bloggs",
  "phone": "937-901-5687",
  "province": "California",
  "zip": "90017",
}
`;

exports[`fromPaymentRequestShippingAddress should format complete address details with a parsable name that included the initials that are also conjunctions 1`] = `
Object {
  "address1": "123 Fake St",
  "address2": "",
  "city": "Los Angeles",
  "company": "",
  "countryCode": "US",
  "firstName": "Joe and Jane",
  "lastName": "Bloggs",
  "phone": "937-901-5687",
  "province": "California",
  "zip": "90017",
}
`;

exports[`fromPaymentRequestShippingAddress should format complete address details with a parsable name that included the initials that are also conjunctions 2`] = `
Object {
  "address1": "123 Fake St",
  "address2": "",
  "city": "Los Angeles",
  "company": "",
  "countryCode": "US",
  "firstName": "Joe",
  "lastName": "Bloggs",
  "phone": "937-901-5687",
  "province": "California",
  "zip": "90017",
}
`;

exports[`fromPaymentRequestShippingAddress should format complete address details with a parsable name that included the initials that are also conjunctions 3`] = `
Object {
  "address1": "123 Fake St",
  "address2": "",
  "city": "Los Angeles",
  "company": "",
  "countryCode": "US",
  "firstName": "Joe",
  "lastName": "Bloggs",
  "phone": "937-901-5687",
  "province": "California",
  "zip": "90017",
}
`;

exports[`fromPaymentRequestShippingAddress should format complete address details with a parsable name that included the initials that are also conjunctions 4`] = `
Object {
  "address1": "123 Fake St",
  "address2": "",
  "city": "Los Angeles",
  "company": "",
  "countryCode": "US",
  "firstName": "Joe",
  "lastName": "Bloggs",
  "phone": "937-901-5687",
  "province": "California",
  "zip": "90017",
}
`;

exports[`fromPaymentRequestShippingAddress should format complete address details with an unparsable or incomplete name 1`] = `
Object {
  "address1": "123 Fake St",
  "address2": "",
  "city": "Los Angeles",
  "company": "",
  "countryCode": "US",
  "firstName": "",
  "lastName": "Madonna",
  "phone": "937-901-5687",
  "province": "California",
  "zip": "90017",
}
`;

exports[`fromPaymentRequestShippingAddress should format complete address details with an unparsable or incomplete name 2`] = `
Object {
  "address1": "123 Fake St",
  "address2": "",
  "city": "Los Angeles",
  "company": "",
  "countryCode": "US",
  "firstName": "",
  "lastName": "Ms Ciccone",
  "phone": "937-901-5687",
  "province": "California",
  "zip": "90017",
}
`;

exports[`fromPaymentRequestShippingAddress should format complete address details with an unparsable or incomplete name 3`] = `
Object {
  "address1": "123 Fake St",
  "address2": "",
  "city": "Los Angeles",
  "company": "",
  "countryCode": "US",
  "firstName": "",
  "lastName": "Adolph Blaine Charles David Earl Frederick Gerald Hubert Irvin John Kenneth Lloyd Martin Nero Oliver Paul Quincy Randolph Sherman Thomas Uncas Victor William Xerxes Yancy Zeus Wolfeschlegel­steinhausen­bergerdorff­welche­vor­altern­waren­gewissenhaft­schafers­wessen­schafe­waren­wohl­gepflege­und­sorgfaltigkeit­beschutzen­vor­angreifen­durch­ihr­raubgierig­feinde­welche­vor­altern­zwolfhundert­tausend­jahres­voran­die­erscheinen­von­der­erste­erdemensch­der­raumschiff­genacht­mit­tungstein­und­sieben­iridium­elektrisch­motors­gebrauch­licht­als­sein­ursprung­von­kraft­gestart­sein­lange­fahrt­hinzwischen­sternartig­raum­auf­der­suchen­nachbarschaft­der­stern­welche­gehabt­bewohnbar­planeten­kreise­drehen­sich­und­wohin­der­neue­rasse­von­verstandig­menschlichkeit­konnte­fortpflanzen­und­sich­erfreuen­an­lebenslanglich­freude­und­ruhe­mit­nicht­ein­furcht­vor­angreifen­vor­anderer­intelligent­geschopfs­von­hinzwischen­sternartig­raum Sr.",
  "phone": "937-901-5687",
  "province": "California",
  "zip": "90017",
}
`;

exports[`fromPaymentRequestShippingAddress should format partial address details when explicitly allowed 1`] = `
Object {
  "address1": undefined,
  "address2": "",
  "city": "Los Angeles",
  "company": "",
  "countryCode": "US",
  "phone": "",
  "province": "California",
  "zip": "90017",
}
`;
